# demoqa-tests

./: .gitignore  pyproject.toml
demoqa_tests/: app.py
demoqa_tests/contols/: __init__.py  checkbox.py  datepicker.py  dropdown.py  menu.py  table.py  tags_input.py
demoqa_tests/model/: data.py
demoqa_tests/model/components/: modal_content.py  panel.py  registration_form.py
demoqa_tests/model/pages/: forms_page.py  home_page.py  registration_page.py  simple_registration_page.py
demoqa_tests/utils/: attach.py  monkey.py  path.py
tests/: conftest.py  test_practice_form.py
